# ComputingStories

./: .gitignore  LICENSE  README.md  fun in C.md
PreShell/: CMakeLists.txt  config.h  main.c  path-loader.c  path-loader.h  tree-bin.c  tree-bin.h  tree-path.h
PreShell/lib/: Readme.md  rb_tree.c  rb_tree.h
awk/: awk-0.md
hackers-delight/: CMakeLists.txt  README.md  hck-del.c  hck-del.h  main.c
hackers-delight/safe-arithmetic/: safe-128b-arith.c  safe-int-arith.c  safe-int-arith.h  sai-definitions.h  sai-maths.c  sai-maths.h  sai-misc.h  sai-overflow.h  sai-string.c  sai-string.h  sai_overflow.c
hackers-delight/testing/: fibo.scm  testing.h  testing.md  tfibo.c  toverflows.c  tstrings.c
hackers-delight/testing/tools/: fibo.ml  ois-fibo.txt
hackers-delight/valcheck/: Makefile  profiling-optimizing.md
lexical/: 00-intro.md  PackCC.md
lexical/samples/PackCC/: Makefile  calc-tools.h  calc.y
lexical/samples/PackCC-calc/: Makefile  calc-tools.c  calc-tools.h  calc.peg
lexical/samples/PackCC-calc/tests/: input  reference
lexical/samples/PackCC/tests/: input
lexical/samples/lemon/: Makefile
lib/include/: compat.h  int128.c  int128.h
lib/rb_tree/test/: Makefile  test.c
optimize-rbtree/: CMakeLists.txt  README.md  main.c  private_rb_tree.h  rb_tree.c  rb_tree.h
optimize-rbtree/data/: MobyDick-en.txt  pride-en.txt
